# Mario

./: .gitignore  CMakeLists.txt  Drawable.cpp  Drawable.hpp  Makefile  README.md  main  main.cpp
Resouces/: 1.tsx  tileset1.txt  untitled.tmx
Resources/: Map1.tmx  Map2.tmx  set.tsx  tileset.tsx  tileset1.tsx  untitled.tmx
src/: Animation.cpp  Animation.hpp  Block.cpp  Block.hpp  Button.cpp  Button.h  CollisionBox.hpp  CollisionProbe.cpp  CollisionProbe.h  CollisionType.h  Fireball.cpp  Fireball.hpp  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  IDrawable.h  Map.cpp  Map.hpp  Mario.cpp  Mario.hpp  Menu.cpp  Menu.h  Player.cpp  Player.hpp  ResorcesManager.cpp  ResourcesManager.cpp  ResourcesManager.hpp  Sound.cpp  Sound.h  Sprite.cpp  Sprite.hpp  SpriteState.h  Text.cpp  Text.h  TextureBackground.cpp  TextureBackground.h  UIFrame.cpp  UIFrame.h  UIText.cpp  (+10 more)
src/baddies/: Baddie.cpp  Baddie.h  BanzaiBill.cpp  BanzaiBill.h  BlueKoopaTroopa.cpp  BlueKoopaTroopa.h  BobOmb.cpp  BobOmb.h  BulletBill.cpp  BulletBill.h  BuzzyBeetle.cpp  BuzzyBeetle.h  FlyingGoomba.cpp  FlyingGoomba.h  Goomba.cpp  Goomba.h  GreenKoopaTroopa.cpp  GreenKoopaTroopa.h  JumpingPiranhaPlant.cpp  JumpingPiranhaPlant.h  MontyMole.cpp  MontyMole.h  MummyBeetle.cpp  MummyBeetle.h  Muncher.cpp  Muncher.h  Rex.cpp  Rex.h
